Refactorings (to match CI requirements) added javadocs to some methods in Visitor.java altered benchmark class for better result categorization in benchexec.